--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
+    "expo-camera": "~13.4.2",
     "expo-font": "~11.4.0",
+    "expo-location": "~16.1.0",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-screens": "~3.22.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.6.3",
-    "expo-location": "~16.1.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
