--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.72.4",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
